--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "WiM-Mapper-Styles",
+  "version": "0.0.1",
   "homepage": "https://github.com/marsmith/WiM-Mapper-Styles",
   "authors": [
     "Marty <marsmith@usgs.gov>"
